[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/MusicAndSounds/heal.wav" type="AudioStream" id=1]
[ext_resource path="res://Assets/Sprites/ship.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Ship.gd" type="Script" id=3]
[ext_resource path="res://addons/Combat_Area/HealthBar.gd" type="Script" id=4]
[ext_resource path="res://Assets/Sprites/healthbar2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/healthbar.png" type="Texture" id=6]
[ext_resource path="res://addons/Combat_Area/CombatArea2D.gd" type="Script" id=7]
[ext_resource path="res://Assets/MusicAndSounds/venom.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/MusicAndSounds/firehit.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/MusicAndSounds/Coin2.wav" type="AudioStream" id=10]
[ext_resource path="res://Assets/MusicAndSounds/hit.wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/MusicAndSounds/icehit.wav" type="AudioStream" id=12]
[ext_resource path="res://Assets/MusicAndSounds/death.wav" type="AudioStream" id=13]
[ext_resource path="res://Assets/MusicAndSounds/coin.wav" type="AudioStream" id=14]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.619469, 0.982301 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.72549, 0, 0, 0, 0 )

[sub_resource type="CapsuleShape2D" id=1]
radius = 17.0
height = 38.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 16.9999
height = 38.0002

[node name="Ship" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="ExplodeParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 32
lifetime = 2.0
one_shot = true
speed_scale = 8.11
explosiveness = 0.38
randomness = 0.12
lifetime_randomness = 0.24
local_coords = false
emission_shape = 1
emission_sphere_radius = 45.56
gravity = Vector2( 0, 1.5 )
angular_velocity = 170.67
scale_amount = 23.22
color_ramp = SubResource( 3 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource( 7 )
template = "Select one in list"
area_type = "Body"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
modulate = Color( 0, 0, 0.501961, 1 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="DestroyEnemieHitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource( 7 )
template = "Select one in list"
area_type = "Damage"
damage = 1
potency = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="DestroyEnemieHitbox"]
modulate = Color( 1, 0, 0, 1 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Ui" type="CanvasLayer" parent="."]
layer = 2
follow_viewport_enable = true

[node name="HealthBar" type="TextureProgress" parent="Ui"]
margin_left = 19.0
margin_top = 21.0
margin_right = 299.0
margin_bottom = 101.0
max_value = 6.0
value = 3.0
rounded = true
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )
script = ExtResource( 4 )
total_hp = 6
hp = 3

[node name="InmunityTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="EffectTimer" type="Timer" parent="."]
one_shot = true

[node name="DieTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="SpawnLasersPos" type="Position2D" parent="."]
position = Vector2( 58, 0 )

[node name="Sounds" type="Node2D" parent="."]

[node name="CoinSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 14 )

[node name="CoinSound2" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 10 )
volume_db = 5.0

[node name="HealSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 1 )

[node name="DamageSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 11 )
volume_db = 5.0

[node name="DamageSoundFire" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 9 )
volume_db = 24.0

[node name="DamageSoundIce" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 12 )
volume_db = 5.0

[node name="DamageSoundVenom" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 8 )
volume_db = 5.0

[node name="DeathSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 13 )
volume_db = 10.0

[connection signal="damage_signal" from="Hitbox" to="." method="damage"]
[connection signal="heal_signal" from="Hitbox" to="." method="heal"]
[connection signal="item_signal" from="Hitbox" to="." method="_on_Hitbox_item_signal"]
[connection signal="die" from="Ui/HealthBar" to="." method="_on_HealthBar_die"]
[connection signal="timeout" from="InmunityTimer" to="." method="_on_InmunityTimer_timeout"]
[connection signal="timeout" from="EffectTimer" to="." method="_on_EffectTimer_timeout"]
[connection signal="timeout" from="DieTimer" to="." method="_on_DieTimer_timeout"]
